--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -19,7 +19,8 @@ services:
     command: npm start
     ports: 
       - '8084:8084'
-    volumes: 
-      - .:/usr/app
+    working_dir: /app
+    volumes:
+      - .:/app
     depends_on:
       - db
