--- a/.github/workflows/automation.yml
+++ b/.github/workflows/automation.yml
@@ -7,8 +7,8 @@ jobs:
     name: Build Docker image
     runs-on: ubuntu-latest
     steps:
-      - name: Build Docker container 
-        uses: actions/checkout@v2
+      - name: Build Docker image 
+        uses: actions/checkout@v3
       - name: Publish to Docker Hub
         uses: docker/build-push-action@v1
         with: 
